    treated as 'Control-R' (which will issue a ROM reload).

  * Added 'usemouse' commandline argument and associated UI item.  This
    toggles the use of the mouse as a controller of any type.

  * Added 'uimessages' commandline argument and associated UI item.
    This toggles showing of UI messages overlaid on the screen.
    Critical messages are still shown, though.

  * Many changes to the FrameBuffer and UI code for 'smaller' systems.
    Stella will now scale correctly to small screens, down to 320x240
    (which is the absolute lower limit supported).  Related to this,
    added 'maxres' commandline argument, which is useful for developers
    testing on such systems.

  * The About dialog now shows the version of SDL in use, and the type
    of CPU the application is running on (i386, x86_64, etc).

  * Improved 'listrominfo' commandline argument to list all information
    from Stella's internal ROM database, including a heading.  This
    output can be imported into a spreadsheet or database program.

  * Renamed 'tiafloat' commandline argument to 'tiadriven'.  The
    emulation of the behaviour of floating TIA pins is also much more
    accurate.

  * Reworked state files so that they're associated with the cartridge
    type used, not the MD5sum of the ROM.  This is useful for developers,
    since the same state file can now be loaded from different ROMs,
    as long as the cart type stays the same.  This also fixes a bug
    where loading from a non-existent state file could cause Stella
    to crash.  Because of these changes, old state files will no longer
    work.

  * Fixed bug in certain editable text fields, where pressing Return/Enter
    would disable any further input.

-Have fun!


2.8.4 to 3.0: (September 11, 2009)

  * Huge updates to the TIA emulation system.  Illegal HMOVEs are now
    handled correctly, resulting in improvements to many ROMs (thanks
    to Wilbert Pol for many ideas and code for these improvements).  All